# context-autopilot

./: .gitignore  BENCHMARK.md  CITATIONS.md  README.md  RECEIPTS.md  SUBMISSION.md  pyproject.toml
autopilot/: __init__.py  cli.py  config.py  types.py
autopilot/agent/: __init__.py  escalation.py  ledger.py  local.py  memory_backend.py  orchestrator.py  state_backend.py  tasks.py
autopilot/checks/: __init__.py  base.py  cicd.py  code_quality.py  dependency_analysis.py  deployment_validation.py  evidence.py  orchestrator.py  registry.py  rlm_runtime.py  security.py  test_execution.py
autopilot/dataset/: __init__.py  build_sft.py  build_tasks.py  split.py
autopilot/distill/: __init__.py  build_distill_data.py  mlx_distill.py  pipeline.py  teacher_glm.py
autopilot/evals/: __init__.py  harness.py  tasks.py
autopilot/export/: __init__.py  classify.py  claude_code.py  codex.py  conventions.py  exporter.py
autopilot/hackathon/: __init__.py  submit.py
autopilot/hermes/: __init__.py
autopilot/mlx_serve/: __init__.py  client.py  server.py
autopilot/repo/: __init__.py  bundle.py  context_layer.py  dag.py  indexer.py  watch.py
autopilot/rewards/: __init__.py  reward_funcs.py  sandbox.py  verifiers_env.py
benchmarks/: claude_oauth_bench.sh
demo/: README.md  autopilot-slides.pptx  make_slides.py  make_video.py  run_demo.sh
integrations/: sponsors.md
skill/: SKILL.md  export_traces.py
tests/: __init__.py  test_agent.py  test_backends.py  test_dag.py  test_evals.py  test_export.py  test_indexer.py  test_reward_funcs.py
workflows/: engineering_review.py
(+13 files in other folders)
